Feat: Add playwright to fallback puppeteer

--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "groq-sdk": "^0.36.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
+    "playwright": "^1.57.0",
     "puppeteer": "^24.31.0",
     "puppeteer-core": "^24.31.0",
+    "puppeteer-firefox": "^0.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.5.0",
