--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "firebase-admin": "^13.6.0",
     "groq-sdk": "^0.36.0",
     "lucide-react": "^0.554.0",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "playwright": "^1.57.0",
     "puppeteer": "^24.31.0",
     "puppeteer-core": "^24.31.0",
