--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@shadcn/ui": "^0.0.4",
     "@sparticuz/chromium": "^141.0.0",
+    "@tcgdex/sdk": "^2.7.1",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -37,7 +40,7 @@
     "puppeteer-firefox": "^0.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^3.5.0",
+    "recharts": "^3.5.1",
     "swiper": "^9.4.1",
     "tailwind-merge": "^3.4.0"
   },
