--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "clsx": "^2.1.1",
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
+    "framer-motion": "^12.23.26",
     "groq-sdk": "^0.36.0",
     "lucide-react": "^0.554.0",
     "next": "^16.0.7",
+    "next-themes": "^0.4.6",
     "playwright": "^1.57.0",
     "puppeteer": "^24.31.0",
     "puppeteer-core": "^24.31.0",
