--- a/package.json
+++ b/package.json
@@ -37,8 +37,12 @@
     "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "playwright": "^1.57.0",
+    "playwright-extra": "^4.3.6",
+    "playwright-extra-plugin-stealth": "^0.0.1",
     "puppeteer": "^24.31.0",
     "puppeteer-core": "^24.31.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "puppeteer-firefox": "^0.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
