--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.26",
+    "fuse.js": "^7.1.0",
     "groq-sdk": "^0.36.0",
     "lucide-react": "^0.554.0",
     "next": "^16.0.7",
