--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "puppeteer-firefox": "^0.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-is": "^19.2.3",
     "recharts": "^3.5.1",
     "swiper": "^9.4.1",
     "tailwind-merge": "^3.4.0"
