--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@shadcn/ui": "^0.0.4",
     "@sparticuz/chromium": "^141.0.0",
     "@tcgdex/sdk": "^2.7.1",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
