--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@shadcn/ui": "^0.0.4",
     "@sparticuz/chromium": "^141.0.0",
+    "@stripe/stripe-js": "^8.6.1",
     "@tcgdex/sdk": "^2.7.1",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
@@ -55,6 +56,7 @@
     "react-dom": "^18.3.1",
     "react-is": "^19.2.3",
     "recharts": "^3.5.1",
+    "stripe": "^20.2.0",
     "swiper": "^9.4.1",
     "tailwind-merge": "^3.4.0"
   },
