--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^18.3.1",
     "react-is": "^19.2.3",
     "recharts": "^3.5.1",
+    "resend": "^6.7.0",
     "stripe": "^20.2.0",
     "swiper": "^9.4.1",
     "tailwind-merge": "^3.4.0"
